// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stories Snapshots Documentazione/Componenti/Stepper/Mobile ConfirmButton 1`] = `
<div>
  <div
    class="steppers mobile-examples"
  >
    <div
      aria-live="polite"
      class="steppers-content"
      style="height: 400px; border: 2px dashed #eee; background: rgb(250, 250, 250); display: flex; justify-content: center; align-items: center; color: rgb(51, 51, 51);"
    >
      <p>
        Contenuto di esempio dello step corrente
      </p>
    </div>
    <nav
      class="steppers-nav"
    >
      <button
        class="steppers-btn-prev btn btn-outline-primary btn-sm"
      >
        <svg
          class="icon"
          enable-background="new 0 0 24 24"
          role="img"
          viewBox="0 0 24 24"
          xml:space="preserve"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            icon
          </title>
          <path
            d="M14.6 17.2 9 11.6 14.6 6l.8.7-4.9 4.9 4.9 4.9z"
          />
        </svg>
        Indietro
      </button>
      <button
        class="steppers-btn-confirm btn btn-primary btn-sm"
      >
        Conferma
      </button>
    </nav>
  </div>
</div>
`;

exports[`Stories Snapshots Documentazione/Componenti/Stepper/Mobile Pallini 1`] = `
<div>
  <div
    class="steppers mobile-examples"
  >
    <div
      aria-live="polite"
      class="steppers-content"
      style="height: 400px; border: 2px dashed #eee; background: rgb(250, 250, 250); display: flex; justify-content: center; align-items: center; color: rgb(51, 51, 51);"
    >
      <p>
        Contenuto di esempio dello step corrente
      </p>
    </div>
    <nav
      class="steppers-nav"
    >
      <button
        class="steppers-btn-prev btn btn-outline-primary btn-sm"
      >
        <svg
          class="icon icon-primary"
          enable-background="new 0 0 24 24"
          role="img"
          viewBox="0 0 24 24"
          xml:space="preserve"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            icon
          </title>
          <path
            d="M14.6 17.2 9 11.6 14.6 6l.8.7-4.9 4.9 4.9 4.9z"
          />
        </svg>
        Indietro
      </button>
      <ul
        class="steppers-dots"
      >
        <li
          class="done"
        >
          <span
            class="visually-hidden"
          >
            Step 1 di 6 - Confermato
          </span>
        </li>
        <li
          class="done"
        >
          <span
            class="visually-hidden"
          >
            Step 2 di 6 - Confermato
          </span>
        </li>
        <li
          class="done"
        >
          <span
            class="visually-hidden"
          >
            Step 3 di 6 - Confermato
          </span>
        </li>
        <li>
          <span
            class="visually-hidden"
          >
            Step 4 di 6
          </span>
        </li>
        <li>
          <span
            class="visually-hidden"
          >
            Step 5 di 6
          </span>
        </li>
        <li>
          <span
            class="visually-hidden"
          >
            Step 6 di 6
          </span>
        </li>
      </ul>
      <button
        class="steppers-btn-next btn btn-outline-primary btn-sm"
      >
        Avanti
        <svg
          class="icon icon-primary"
          enable-background="new 0 0 24 24"
          role="img"
          viewBox="0 0 24 24"
          xml:space="preserve"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            icon
          </title>
          <path
            d="m9.8 17.2-.8-.7 4.9-4.9L9 6.7l.8-.7 5.6 5.6z"
          />
        </svg>
      </button>
    </nav>
  </div>
</div>
`;

exports[`Stories Snapshots Documentazione/Componenti/Stepper/Mobile ProgressBar 1`] = `
<div>
  <div
    class="steppers mobile-examples"
  >
    <div
      aria-live="polite"
      class="steppers-content"
      style="height: 400px; border: 2px dashed #eee; background: rgb(250, 250, 250); display: flex; justify-content: center; align-items: center; color: rgb(51, 51, 51);"
    >
      <p>
        Contenuto di esempio dello step corrente
      </p>
    </div>
    <nav
      class="steppers-nav"
    >
      <button
        class="steppers-btn-prev btn btn-outline-primary btn-sm"
      >
        <svg
          class="icon icon-primary"
          enable-background="new 0 0 24 24"
          role="img"
          viewBox="0 0 24 24"
          xml:space="preserve"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            icon
          </title>
          <path
            d="M14.6 17.2 9 11.6 14.6 6l.8.7-4.9 4.9 4.9 4.9z"
          />
        </svg>
        Indietro
      </button>
      <div
        class="steppers-progress"
      >
        <div
          class="progress"
        >
          <div
            class="progress-bar-label"
          >
            <span
              class="visually-hidden"
            />
          </div>
          <div
            aria-valuemax="100"
            aria-valuemin="0"
            aria-valuenow="33"
            class="progress-bar"
            role="progressbar"
            style="width: 33%;"
          />
        </div>
      </div>
      <button
        class="steppers-btn-next btn btn-outline-primary btn-sm"
      >
        Avanti
        <svg
          class="icon icon-primary"
          enable-background="new 0 0 24 24"
          role="img"
          viewBox="0 0 24 24"
          xml:space="preserve"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            icon
          </title>
          <path
            d="m9.8 17.2-.8-.7 4.9-4.9L9 6.7l.8-.7 5.6 5.6z"
          />
        </svg>
      </button>
    </nav>
  </div>
</div>
`;

exports[`Stories Snapshots Documentazione/Componenti/Stepper/Mobile SaveButton 1`] = `
<div>
  <div
    class="steppers mobile-examples"
  >
    <div
      aria-live="polite"
      class="steppers-content"
      style="height: 400px; border: 2px dashed #eee; background: rgb(250, 250, 250); display: flex; justify-content: center; align-items: center; color: rgb(51, 51, 51);"
    >
      <p>
        Contenuto di esempio dello step corrente
      </p>
    </div>
    <nav
      class="steppers-nav"
    >
      <button
        class="steppers-btn-prev btn btn-outline-primary btn-sm"
      >
        <svg
          class="icon"
          enable-background="new 0 0 24 24"
          role="img"
          viewBox="0 0 24 24"
          xml:space="preserve"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            icon
          </title>
          <path
            d="M14.6 17.2 9 11.6 14.6 6l.8.7-4.9 4.9 4.9 4.9z"
          />
        </svg>
        Indietro
      </button>
      <button
        class="steppers-btn-save btn btn-primary btn-sm"
      >
        Salva
      </button>
      <button
        class="stepper-btn-next btn btn-outline-primary btn-sm"
      >
        Avanti
        <svg
          class="icon"
          enable-background="new 0 0 24 24"
          role="img"
          viewBox="0 0 24 24"
          xml:space="preserve"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            icon
          </title>
          <path
            d="m9.8 17.2-.8-.7 4.9-4.9L9 6.7l.8-.7 5.6 5.6z"
          />
        </svg>
      </button>
    </nav>
  </div>
</div>
`;
